version 0.09.4 (TBA):
	* Add support for a window icon.
	* Add a --hidden command line option.
	* Change "Display pulled down on start" to "Start Tilda hidden".
	* Updated the Preferences window.
	* Add "centered horizontally" and "centered vertically" options.
	* Enable double buffering by default. 
	* Fix getnextinstance() function.
	* Changed default slide delay to 15000
	* Now installs .desktop file and icon
	* Set copy/paste to ctrl-shift-c/ctrl-shift-v
	* Alt-# for switching tabs now :), sorry for all the changes
	* Changed getinstance back to its old way of working,
	  so it doesn't just count locks but checks the numbers (thanks wilber)

version 0.09.3 (2006-6-28):
	* ctrl-# changes tab, sorry not alt-# (bash uses that)
	* ctrl-shift-w fix
	* Added ability to set height/width by percentage of screen resolution
	* All Tabs are now the same size
	* Remove stale code (apply() function).
	* Patch from Danny Milosavljevic (thanks!) which fixes:
	* "tilda -C", then Cancel quits app now
	* wizard is a gtk dialog now (modal, not sure if it's used in other
	  places than the -C command line arg)
	* wizard uses stock buttons now
	* fixed the command line in the wizard to take command line arguments
	  as well
	* fixed the restart handling in close_tab_on_exit (combo entry order
	  changed, but the switch statement contained the old order - it seems)
	* fixed a strlen warning in tilda_window.c
	* removed the apply button since it was confusing

version 0.09.2 (2006-1-21):
	* Added libConfuse to configure.in.
	* Better command-line option help generation.
	* Switch to libConfuse for config-file parsing.
	* Internal cleanups / documentation.
	* Increase use of GLib.
	* Sliding action added
	* No more blinking terminal
	* Added shortcuts for adding tabs and going to the next or prev tab
	* Various bug fixes

version 0.09.1 (2005-10-4):
	* Fixed problem of tab taking other tabs title
	* Fixed 100% CPU problem when Tilda is started hidden

version 0.09 (2005-10-3):