@@ -89,6 +89,7 @@ static cfg_opt_t new_conf[] = {
     CFG_BOOL("centered_horizontally", FALSE, CFGF_NONE),
     CFG_BOOL("centered_vertically", FALSE, CFGF_NONE),
     CFG_BOOL("enable_transparency", FALSE, CFGF_NONE),
+    CFG_BOOL("double_buffer", FALSE, CFGF_NONE),
     CFG_END()
 };
 
@@ -275,8 +276,8 @@ gboolean init_tilda_window (tilda_window *tw, tilda_term *tt)
     GClosure *goto_tab_closure_9, *goto_tab_closure_10;
     GError *error;
 
-    GdkPixbuf *window_icon;
-    const gchar window_icon_file[] = "/usr/share/pixmaps/tilda.png"; // A better way to get this path?
+    //GdkPixbuf *window_icon;
+    //const gchar window_icon_file[] = "/usr/share/pixmaps/tilda.png"; // A better way to get this path?
 
     /* Create a window to hold the scrolling shell, and hook its
      * delete event to the quit function.. */
@@ -383,7 +384,8 @@ gboolean init_tilda_window (tilda_window *tw, tilda_term *tt)
     gtk_window_set_decorated (GTK_WINDOW(tw->window), FALSE);
 
     /*  Set a window icon! */
-    window_icon = gdk_pixbuf_new_from_file (window_icon_file, NULL);
+    /* REMOVED TILL WE FIND A WAY TO DEAL WITH THE PREFIX PATH */
+    /*window_icon = gdk_pixbuf_new_from_file (window_icon_file, NULL);
 
     if (window_icon == NULL)
     {
@@ -394,7 +396,7 @@ gboolean init_tilda_window (tilda_window *tw, tilda_term *tt)
     {
         gtk_window_set_icon (GTK_WINDOW(tw->window), window_icon);
         g_object_unref (window_icon);
-    }
+    }*/
 
     gtk_widget_set_size_request (GTK_WIDGET(tw->window), 0, 0);
 
