@@ -38,6 +38,7 @@ struct wizard_items
     GtkWidget *check_always_on_top;
     GtkWidget *check_do_not_show_in_taskbar;
     GtkWidget *check_start_tilda_hidden;
+    GtkWidget *check_enable_double_buffering;
     GtkWidget *check_terminal_bell;
     GtkWidget *check_cursor_blinks;
     GtkWidget *check_enable_antialias;
